WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226863
WKScriptMessageHandlerWithReply should raise an exception if replyHandler is called twice
https://bugs.webkit.org/show_bug.cgi?id=226863
Summary
WKScriptMessageHandlerWithReply should raise an exception if replyHandler is ...
Alex Christensen
Reported
2021-06-09 19:02:16 PDT
WKScriptMessageHandlerWithReply should raise an exception if replyHandler is called twice
Attachments
Patch
(3.51 KB, patch)
2021-06-09 19:04 PDT
,
Alex Christensen
cdumez
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-06-09 19:04:20 PDT
Created
attachment 431040
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-06-16 19:03:33 PDT
<
rdar://problem/79427736
>
Alex Christensen
Comment 3
2021-06-17 09:52:27 PDT
r278992
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug