WKScriptMessageHandlerWithReply should raise an exception if replyHandler is called twice https://bugs.webkit.org/show_bug.cgi?id=226863

Reviewed by Chris Dumez.

Source/WebKit:

We currently dereference null inside CompletionHandlerWithFinalizer.
This makes it more obvious what is going on.
Related to rdar://78865409 but not solving it.

* UIProcess/API/Cocoa/WKUserContentController.mm:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
(-[AsyncScriptMessageHandler userContentController:didReceiveScriptMessage:replyHandler:]):



Canonical link: https://commits.webkit.org/238918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278992 268f45cc-cd09-0410-ab3c-d52691b4dbfc